BGDIINF_SB-1537: Better POST search examples in spec
And some fixes of POST
